feat(backend,frontend): refactor video analysis pipeline and disable fallback mechanisms
- Remove audio processing fallback strategy to enforce strict error handling
- Disable orchestrator fallback report generation for failed analyses
- Enhance metadata extraction with OpenCV fallback when MoviePy fails
- Add robust error handling for video metadata extraction with multiple extraction methods
- Implement file size validation before attempting MoviePy metadata extraction
- Add new analyzer modules: real_video_analyzer.py, simple_analyzer.py, and fix_video_analysis.py
- Update AnalysisProgress component for improved progress tracking
- Add VSCode settings configuration file
- Update .gitignore to exclude downloads directory
- Add test files: test_real_analyzer.py and test_taylor_swift.py for validation
- Improve logging clarity in metadata extraction process
- Enforce complete failure instead of partial fallback results for better error visibility

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,6 @@ backend/*.pth
 # System files
 .DS_Store
 *.log
-
+downloads
 backend/The Great Depression - 5 Minute History Lesson.mp4
 backend/197485-905015019_small.mp4
